Deploy prep: Dockerfile, docker-compose, mobile responsive, funder dashboard, CORS env config, Vercel SPA routing
- Upgraded Dockerfile to multi-stage build (build inside Docker, JRE-only runtime)
- Added docker-compose.yml for local MySQL + backend via Docker
- CORS now reads ALLOWED_ORIGINS env var (comma-separated) so Vercel URL works in prod
- Funder dashboard redesigned: shows personal pledge as hero stat, not project budget
- Mobile responsive: collapsible sidebar drawer, responsive grids on all pages
- Youth community photo added to landing page
- vercel.json added for React Router SPA fallback routing